Fix tests:
 - Add jackson snake_case strategy
 - Fields correction
 - Config web client max memory
 - Improve javaagent
 - env variable more explicit